--- a/app/views/16/pre-sentence-report/summary-of-offences-under-consideration.html
+++ b/app/views/16/pre-sentence-report/summary-of-offences-under-consideration.html
@@ -71,14 +71,14 @@
                   Summary of offences under consideration
                 </h1>
                 <div id="summary-of-offences-hint" class="govuk-hint">
-                  Review current and pervious offences to identify any patterns of
+                  Review current and previous offences to identify any patterns of
                   offending. This could include repeated similar or escalating
                   offences. Consider culpability when describing the offences.
                   <br/><br/>
                   Discuss the offences relevant to this pre-sentence report
                   that should be discussed before the court.<br/><br/>
                   You may want to <a href="https://www.sentencingcouncil.org.uk/search " class="govuk-link" rel="noreferrer noopener" target="_blank">
-                    review the sentencing guidelines. (opens in new tab)</a>
+                    review the sentencing guidelines (opens in new tab)</a>.
                 </div>
                 <textarea class="govuk-textarea" id="summary-of-offences" name="summary-of-offences" rows="18" aria-describedby="summary-of-offences-hint">{{data['summary-of-offences']}}</textarea>
               </div>
