Improve guidance on victim impact assessment hint
- include defendants interpretation of the offence
  so we have an indicative not exhaustive list

--- a/app/views/16/pre-sentence-report/victim-impact-assessment.html
+++ b/app/views/16/pre-sentence-report/victim-impact-assessment.html
@@ -91,13 +91,14 @@
                 <p class="govuk-body">
                   The CPS pack usually includes a statement from the victim.
                   Use this alongside the account provided in the pre-sentence
-                  interview to write the victim impact assessment. This should
-                  consider the defendant's:</p>
+                  report interview to write the victim impact assessment. This
+                  should consider the defendant's:</p>
                 <ul class="govuk-list govuk-list--bullet">
                   <li>attitudes</li>
                   <li>responsibility</li>
                   <li>circumstances</li>
                   <li>motivations</li>
+                  <li>the defendant's interpretation of the offence</li>
                 </ul>
               </div>
             </details>
