Move guidance to details component
The guidance is long and gets in the way of what
users need to do on the page. Moving to a details
component so users can choose when disclose this
extra content.

--- a/app/views/16/pre-sentence-report/additional-behaviours-and-lifestyle-considerations.html
+++ b/app/views/16/pre-sentence-report/additional-behaviours-and-lifestyle-considerations.html
@@ -73,18 +73,27 @@
               Describe any additional behaviours and lifestyle considerations
               that could have in impact on the proposed sentence.
             </div>
-            <p class="govuk-body">You may want to consider:</p>
-            <ul class="govuk-list govuk-list--bullet">
-              <li>accommodation</li>
-              <li>finances</li>
-              <li>lifestyle</li>
-              <li>associates</li>
-              <li>alcohol and drug use</li>
-              <li>mental health</li>
-              <li>thinking and behavioural issues</li>
-              <li>attitudes</li>
-              <li>general health</li>
-            </ul>
+            <details class="govuk-details">
+              <summary class="govuk-details__summary">
+                <span class="govuk-details__summary-text">
+                  Help with additional behaviours and lifestyle considerations
+                </span>
+              </summary>
+              <div class="govuk-details__text">
+                <p class="govuk-body">You may want to consider:</p>
+                <ul class="govuk-list govuk-list--bullet">
+                  <li>accommodation</li>
+                  <li>finances</li>
+                  <li>lifestyle</li>
+                  <li>associates</li>
+                  <li>alcohol and drug use</li>
+                  <li>mental health</li>
+                  <li>thinking and behavioural issues</li>
+                  <li>attitudes</li>
+                  <li>general health</li>
+                </ul>
+              </div>
+            </details>
             <textarea class="govuk-textarea" id="additional-behaviours-and-lifestyle-considerations" name="additional-behaviours-and-lifestyle-considerations" rows="8" aria-describedby="additional-behaviours-and-lifestyle-considerations-hint">{{data['additional-behaviours-and-lifestyle-considerations']}}</textarea>
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
