Summary of offences shows historical offences

--- a/app/views/16/pre-sentence-report/summary-of-offences-under-consideration.html
+++ b/app/views/16/pre-sentence-report/summary-of-offences-under-consideration.html
@@ -107,6 +107,14 @@
                       to the value of £625.</p>
                   </div>
                 </div>
+                <div class="govuk-summary-card">
+                  <div class="govuk-summary-card__title-wrapper">
+                    <h2 class="govuk-summary-card__title">Historical offences</h2>
+                  </div>
+                  <div class="govuk-summary-card__content">
+                    <p class="govuk-body">There are no historical offences</p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
