Write proposal shows summary of offences
- remove current offences
- remove historical offences
- add in summary of offences under considerdation

--- a/app/views/16/pre-sentence-report/write-sentencing-proposal.html
+++ b/app/views/16/pre-sentence-report/write-sentencing-proposal.html
@@ -177,37 +177,12 @@
                   <div class="govuk-accordion__section-header">
                     <h3 class="govuk-accordion__section-heading">
                       <span class="govuk-accordion__section-button" id="accordion-default-heading-4">
-                        Current offences
+                        Summary of offences under consideration
                       </span>
                     </h3>
                   </div>
                   <div id="accordion-default-content-4" class="govuk-accordion__section-content">
-                    <p class="govuk-body govuk-!-font-weight-bold">Committed an
-                      act of criminal damage</p>
-                    <p class="govuk-body">On 13/06/2023, unlawfully and
-                      intentionally, committed an act of criminal damage by
-                      scratching the paintwork on four cars causing damage to
-                      the value of £2,500.</p>
-                    <p class="govuk-body govuk-!-font-weight-bold">Theft from a
-                      motor vehicle</p>
-                    <p class="govuk-body">On the 13/06/2023, unlawfully and
-                      intentionally, committed an act of theft from a motor
-                      vehicle by breaking in and then stealing several items
-                      from said vehicle to the value of £700.</p>
-                    <p class="govuk-body">This includes a mobile phone, coat,
-                      large shoulder bag and the said shoulder bag's contents.</p>
-                  </div>
-                </div>
-                <div class="govuk-accordion__section">
-                  <div class="govuk-accordion__section-header">
-                    <h3 class="govuk-accordion__section-heading">
-                      <span class="govuk-accordion__section-button" id="accordion-default-heading-4">
-                        Historical offences
-                      </span>
-                    </h3>
-                  </div>
-                  <div id="accordion-default-content-4" class="govuk-accordion__section-content">
-                    <p class="govuk-body">There are no historical offences</p>
+                    <p class="govuk-body">{{data['summary-of-offences']}}</p>
                   </div>
                 </div>
               </div>
