FIX typo on write proposal Rehabilitative component

--- a/app/views/16/pre-sentence-report/write-sentencing-proposal.html
+++ b/app/views/16/pre-sentence-report/write-sentencing-proposal.html
@@ -153,7 +153,7 @@
                   <div class="govuk-accordion__section-header">
                     <h3 class="govuk-accordion__section-heading">
                       <span class="govuk-accordion__section-button" id="accordion-default-heading-3">
-                        Rehab component
+                        Rehabilitative component
                       </span>
                     </h3>
                   </div>
