Track work on index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,6 +16,13 @@
       Pre-sentence report prototype</a></p>
     <ul class="govuk-list govuk-list--bullet">
       <li>
+        <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3910">
+          Pre user research review and changes</a><br />
+          Reviewed the prototype and added some more changes. Also pulled in
+          some changes after a call about the Electronic proposal framework
+          form.</p>
+      </li>
+      <li>
         <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3854">
           SME Review part 1</a><br />
         <a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3907">
