Summary of offences, remove historical offences
Remove historical offences as report writers
should be thinking about the current offences, not
how a pattern of offending may have changed.

Remove guidance around historical offences.

Remove link to sentencing guidelines as this
should be considered as part of the Electronic
proposal framework form. Also the same person
should also be writing the report.

--- a/app/views/16/pre-sentence-report/summary-of-offences-under-consideration.html
+++ b/app/views/16/pre-sentence-report/summary-of-offences-under-consideration.html
@@ -70,16 +70,10 @@
                 <h1 class="govuk-heading-xl" for="summary-of-offences">
                   Summary of offences under consideration
                 </h1>
-                <div id="summary-of-offences-hint" class="govuk-hint">
-                  Review current and previous offences to identify any patterns of
-                  offending. This could include repeated similar or escalating
-                  offences. Consider culpability when describing the offences.
-                  <br/><br/>
-                  Discuss the offences relevant to this pre-sentence report
-                  that should be discussed before the court.<br/><br/>
-                  You may want to <a href="https://www.sentencingcouncil.org.uk/search " class="govuk-link" rel="noreferrer noopener" target="_blank">
-                    review the sentencing guidelines (opens in new tab)</a>.
-                </div>
+                <div id="summary-of-offences-hint" class="govuk-hint">Discuss
+                  the offences relevant to this pre-sentence report that should
+                  be discussed before the court. Consider culpability when
+                  describing the offences.</div>
                 <textarea class="govuk-textarea" id="summary-of-offences" name="summary-of-offences" rows="18" aria-describedby="summary-of-offences-hint">{{data['summary-of-offences']}}</textarea>
               </div>
             </div>
@@ -105,14 +99,6 @@
                       intentionally, committed an act of criminal damage by
                       smashing two side windows on a car causing damage
                       to the value of £625.</p>
-                  </div>
-                </div>
-                <div class="govuk-summary-card">
-                  <div class="govuk-summary-card__title-wrapper">
-                    <h2 class="govuk-summary-card__title">Historical offences</h2>
-                  </div>
-                  <div class="govuk-summary-card__content">
-                    <p class="govuk-body">There are no historical offences</p>
                   </div>
                 </div>
               </div>
