pattern of offending shows current offences
Add current offences to the right column

--- a/app/views/16/pre-sentence-report/pattern-of-offending-and-response-to-supervision.html
+++ b/app/views/16/pre-sentence-report/pattern-of-offending-and-response-to-supervision.html
@@ -91,6 +91,30 @@
               <div class="app-split-pane__supporting-information">
                 <div class="govuk-summary-card">
                   <div class="govuk-summary-card__title-wrapper">
+                    <h2 class="govuk-summary-card__title">Current offences</h2>
+                  </div>
+                  <div class="govuk-summary-card__content">
+                    <h3 class="govuk-heading-s">Committed an act of criminal
+                      damage</h3>
+                    <h3 class="govuk-heading-s">Guilty plea</h3>
+                    <p class="govuk-body">On 13/06/2023, unlawfully and
+                      intentionally, committed an act of criminal damage by
+                      scratching the paintwork on four cars causing damage to
+                      the value of £2,500.</p>
+                      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+                    <h3 class="govuk-heading-s">Committed an act of criminal
+                      damage</h3>
+                    <h3 class="govuk-heading-s">Not guilty plea</h3>
+                    <p class="govuk-body">On 17/12/2018, unlawfully and
+                      intentionally, committed an act of criminal damage by
+                      smashing two side windows on a car causing damage
+                      to the value of £625.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="app-split-pane__supporting-information">
+                <div class="govuk-summary-card">
+                  <div class="govuk-summary-card__title-wrapper">
                     <h2 class="govuk-summary-card__title">Historical offences</h2>
                   </div>
                   <div class="govuk-summary-card__content">
