Content designer review
We did lots of good changes to make things more
clear and readable.

--- a/app/views/16/pre-sentence-report/additional-behaviours-and-lifestyle-considerations.html
+++ b/app/views/16/pre-sentence-report/additional-behaviours-and-lifestyle-considerations.html
@@ -71,7 +71,7 @@
             </h1>
             <div id="additional-behaviours-and-lifestyle-considerations-hint" class="govuk-hint">
               Describe any additional behaviours and lifestyle considerations
-              that could have in impact on the proposed sentence.
+              that could have an impact on the proposed sentence.
             </div>
             <details class="govuk-details">
               <summary class="govuk-details__summary">
