--- a/app/views/16/pre-sentence-report/consider-sentence-components.html
+++ b/app/views/16/pre-sentence-report/consider-sentence-components.html
@@ -92,10 +92,7 @@
                   Explain what you think the rehabilitative aspect of this
                   sentence is, giving reference to things like available
                   accredited programs available in your area that could benefit
-                  the defendant or have proven effective previously.<br/><br/>
-                  The <a href="https://epf.linkspace.uk" class="govuk-link" rel="noreferrer noopener" target="_blank">effective proposal framework
-                    form (opens in new tab)</a>, if available, should help
-                  complete this part of the report.
+                  the defendant or have proven effective previously.
                   </div>
                 <textarea class="govuk-textarea" id="consider-rehabilitative-sentence-component" name="consider-rehabilitative-sentence-component" rows="12" aria-describedby="consider-rehabilitative-sentence-component-hint">{{data['consider-rehabilitative-sentence-component']}}</textarea>
               </div>
@@ -138,8 +135,8 @@
                   </label>
                 </h2>
                 <div id="alternative-sentencing-options-hint" class="govuk-hint">
-                  Explain what relevant alternative sent options you considered
-                  and why that may be less appropriate.</div>
+                  Explain the relevant alternative sentencing options you
+                  considered and why they may be less appropriate.</div>
                 <textarea class="govuk-textarea" id="alternative-sentencing-options" name="alternative-sentencing-options" rows="12" aria-describedby="alternative-sentencing-options-hint">{{data['consider-punitive-sentence-component']}}</textarea>
               </div>
               <div class="govuk-button-group">
@@ -154,8 +151,8 @@
             <div class="govuk-grid-column-one-third">
               <div class="govuk-summary-card">
                 <div class="govuk-summary-card__title-wrapper">
-                  <h2 class="govuk-summary-card__title">Electronic proposal form
-                    1</h2>
+                  <h2 class="govuk-summary-card__title">Electronic proposal
+                    framework 1</h2>
                 </div>
                 <div class="govuk-summary-card__content">
                   <h3 class="govuk-heading-s">Sentence proposals</h3>
