--- a/app/views/16/pre-sentence-report/culpability-and-risk.html
+++ b/app/views/16/pre-sentence-report/culpability-and-risk.html
@@ -149,8 +149,8 @@
                   imminence of re-offending</h3>
                 <div id="defendant-nature-imminence-re-offending-hint" class="govuk-hint">
                   Describe what the nature of re-offending is and how it may be
-                  managed. If other factors contradict ORGS scores, then explain
-                  why the ORGS score is wrong, what factor is affecting it, and
+                  managed. If other factors contradict OGRS scores, then explain
+                  why the OGRS score is wrong, what factor is affecting it, and
                   what the risk actually is.
                 </div>
                 <textarea class="govuk-textarea" id="defendant-nature-imminence-re-offending" name="defendant-nature-imminence-re-offending" rows="8" aria-describedby="defendant-nature-imminence-re-offending-hint" >{{data['defendant-nature-imminence-re-offending']}}</textarea>
