--- a/app/views/16/pre-sentence-report/defendant-details.html
+++ b/app/views/16/pre-sentence-report/defendant-details.html
@@ -73,9 +73,9 @@
               <p class="govuk-body">This information comes from NDelius.</p>
                 <p class="govuk-body">If it is incorrect you will need to:</p>
                 <ol class="govuk-list govuk-list--number">
-                  <li>delete this pre-sentence report</li>
-                  <li>update the defendant's details in NDelius</li>
-                  <li>start a new pre-sentence report in NDelius</li>
+                  <li>Delete this pre-sentence report</li>
+                  <li>Update the defendant's details in NDelius</li>
+                  <li>Start a new pre-sentence report in NDelius</li>
                 </ol>
                 <p class="govuk-body">Once you have done this the updated
                   information will pull through to the new pre-sentence report.</p>
