--- a/app/views/16/pre-sentence-report/summary-of-offences-under-consideration.html
+++ b/app/views/16/pre-sentence-report/summary-of-offences-under-consideration.html
@@ -71,9 +71,8 @@
                   Summary of offences under consideration
                 </h1>
                 <div id="summary-of-offences-hint" class="govuk-hint">Discuss
-                  the offences relevant to this pre-sentence report that should
-                  be discussed before the court. Consider culpability when
-                  describing the offences.</div>
+                  the offences relevant to this pre-sentence report. Consider
+                  culpability when describing the offences.</div>
                 <textarea class="govuk-textarea" id="summary-of-offences" name="summary-of-offences" rows="18" aria-describedby="summary-of-offences-hint">{{data['summary-of-offences']}}</textarea>
               </div>
             </div>
