--- a/app/views/16/pre-sentence-report/write-sentencing-proposal.html
+++ b/app/views/16/pre-sentence-report/write-sentencing-proposal.html
@@ -78,8 +78,8 @@
                 </h2>
                 <div id="sentencing-proposal-hint" class="govuk-hint">
                   Create a sentencing proposal based on the all the information
-                  you have discovered. View notes made in previous sections to
-                  help inform your proposal.</div>
+                  you have gathered and analysed. Consider the notes you've made
+                  in previous sections to help inform your proposal.</div>
                 <textarea class="govuk-textarea" id="sentencing-proposal" name="sentencing-proposal" rows="30" aria-describedby="sentencing-proposal-hint">{{data['sentencing-proposal']}}</textarea>
               </div>
             </div>
