--- a/app/views/16/pre-sentence-report/pattern-of-offending-and-response-to-supervision.html
+++ b/app/views/16/pre-sentence-report/pattern-of-offending-and-response-to-supervision.html
@@ -72,17 +72,14 @@
                   Pattern of offending and response to supervision
                 </h1>
                 <div id="pattern-of-offending-and-response-to-supervision-hint" class="govuk-hint">
-                  Review current and pervious offences to identify any patterns of
+                  Review current and previous offences to identify any patterns of
                   offending. This could include repeated similar or escalating
                   offences.<br/><br/>
                   You should consider themes like: proximity of offences, time
                   between release and offence, crimes on bail, crimes on orders,
-                  crimes on license.<br/><br/>
+                  crimes on licence.<br/><br/>
                   Look for patterns that may indicate supervisions, interventions
-                  or accredited programs that may have reduced re-offending.<br/><br/>
-                  It can be helpful for the judiciary to talk about one offence,
-                  the defendant's response to supervision for that offence at a
-                  time.
+                  or accredited programs that may have reduced re-offending.
                 </div>
                 <textarea class="govuk-textarea" id="pattern-of-offending-and-response-to-supervision" name="pattern-of-offending-and-response-to-supervision" rows="18" aria-describedby="pattern-of-offending-and-response-to-supervision-hint">{{data['pattern-of-offending-and-response-to-supervision']}}</textarea>
               </div>
