--- a/app/views/16/pre-sentence-report/pattern-of-offending-and-response-to-supervision.html
+++ b/app/views/16/pre-sentence-report/pattern-of-offending-and-response-to-supervision.html
@@ -79,7 +79,7 @@
                   between release and offence, crimes on bail, crimes on orders,
                   crimes on licence.<br/><br/>
                   Look for patterns that may indicate supervisions, interventions
-                  or accredited programs that may have reduced re-offending.
+                  or accredited programs that may have reduced reoffending.
                 </div>
                 <textarea class="govuk-textarea" id="pattern-of-offending-and-response-to-supervision" name="pattern-of-offending-and-response-to-supervision" rows="18" aria-describedby="pattern-of-offending-and-response-to-supervision-hint">{{data['pattern-of-offending-and-response-to-supervision']}}</textarea>
               </div>
