Fix typo remove (edit)

--- a/app/views/16/pre-sentence-report/consider-sentence-components.html
+++ b/app/views/16/pre-sentence-report/consider-sentence-components.html
@@ -165,7 +165,7 @@
                   <p class="govuk-body">ELECTRONIC GPS  MONITORED EXCLUSIONS
                     (med band) Requirement, in the region of 6 months</p>
                   <p class="govuk-body">STEPPING STONES, PS Intervention,
-                    Contains up to 32 sessions (edited)</p>
+                    Contains up to 32 sessions</p>
                 </div>
               </div>
             </div>
