--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,6 +9,17 @@
     <h1 class="govuk-heading-xl">
       {{ serviceName }}
     </h1>
+    <h2 class="govuk-heading-m">v17</h2>
+    <p><a class="govuk-link" href="/17/verification-report/index.html">
+      Verification report prototype</a> |
+      <a class="govuk-link" href="/17/pre-sentence-report/index.html">
+      Pre-sentence report prototype</a></p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>
+        <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3923">
+          Increment to v17</a></p>
+      </li>
+    </ul>
     <h2 class="govuk-heading-m">v16</h2>
     <p><a class="govuk-link" href="/16/verification-report/index.html">
       Verification report prototype</a> |
