Offence analysis improvements
Offences from NDelius:
- show NDelius offences on table
- tick box to include on report
- order up and down to output on report
- do not show verdict as that was not on paper PSR
  forms

Analysis of offences:
- General guidance on what to do
- details component touches on specific things to
  include

Pattern of offending and response to supervision:
- add guidance on on what to do
- add text area to capture response

Housekeeping:
- rename page title to reflect purpose of page
- update sub nav with page name
- update routes with page name

--- a/app/views/18/pre-sentence-report/write-sentencing-proposal.html
+++ b/app/views/18/pre-sentence-report/write-sentencing-proposal.html
@@ -13,8 +13,8 @@
                 Defendant details</a>
             </li>
             <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="summary-of-offences-under-consideration">
-                Summary of offences under consideration</a>
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offence-analysis">
+                Offence analysis</a>
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="victim-impact-assessment">
@@ -89,7 +89,7 @@
                 <div class="govuk-accordion__section-header">
                   <h3 class="govuk-accordion__section-heading">
                     <span class="govuk-accordion__section-button" id="accordion-default-heading-4">
-                      Summary of offences under consideration
+                      Offence analysis
                     </span>
                   </h3>
                 </div>
