--- a/app/views/18/pre-sentence-report/preview-report.html
+++ b/app/views/18/pre-sentence-report/preview-report.html
@@ -13,8 +13,8 @@
                 Defendant details</a>
             </li>
             <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="summary-of-offences-under-consideration">
-                Summary of offences under consideration</a>
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offence-analysis">
+                Offence analysis</a>
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="victim-impact-assessment">
@@ -374,7 +374,7 @@
                           intentionally, committed an act of criminal damage by
                           scratching the paintwork on four cars causing damage
                           to the value of £2,500.<br>
-                          <a class="govuk-link" href="summary-of-offences-under-consideration">Change
+                          <a class="govuk-link" href="offence-analysis">Change
                             <span class="govuk-visually-hidden">offences</span>
                           </a>
                         </p>
@@ -389,7 +389,7 @@
                           coat, large shoulder bag and the said shoulder bag's
                           contents.
                           <br>
-                          <a class="govuk-link" href="summary-of-offences-under-consideration">Change
+                          <a class="govuk-link" href="offence-analysis">Change
                             <span class="govuk-visually-hidden">offences</span>
                           </a></p>
                       </div>
@@ -665,7 +665,7 @@
                               </td>
                               <th scope="row" class="govuk-table__header">ANOTHER THING THAT WAS CHECKED:</th>
                               <td class="govuk-table__cell">WAS CHECKED BY DOCUMENT 2
-                                <br><a class="govuk-link" href="summary-of-offences-under-consideration">
+                                <br><a class="govuk-link" href="offence-analysis">
                                   Change <span class="govuk-visually-hidden">
                                     ANOTHER THING THAT WAS CHECKED</span></a>
                               </td>
