--- a/app/views/18/pre-sentence-report/additional-behavioural-factors-and-lifestyle-considerations.html
+++ b/app/views/18/pre-sentence-report/additional-behavioural-factors-and-lifestyle-considerations.html
@@ -25,7 +25,7 @@
                 Pattern of offending and response to supervision</a>
             </li>
             <li class="app-subnav__section-item app-subnav__section-item--current">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="additional-behaviours-and-lifestyle-considerations">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="additional-behavioural-factors-and-lifestyle-considerations">
                 Additional behaviours and lifestyle considerations</a>
             </li>
             <li class="app-subnav__section-item">
@@ -60,53 +60,62 @@
       </nav>
     </div>
     <div class="app-split-pane__content">
-      <main id="main-content" class="app-content" role="main">
-        <form action="additional-behaviours-and-lifestyle-considerations" method="post" novalidate>
-          <div class="govuk-form-group">
-            <span class="govuk-caption-xl">
-              Dylan Adam Armstrong CRN: E234516
-            </span>
-            <h1 class="govuk-heading-xl" for="additional-behaviours-and-lifestyle-considerations">
-              Additional behaviours and lifestyle considerations
-            </h1>
-            <div id="additional-behaviours-and-lifestyle-considerations-hint" class="govuk-hint">
-              Describe any additional behaviours and lifestyle considerations
-              that could have an impact on the proposed sentence.
-            </div>
-            <details class="govuk-details">
-              <summary class="govuk-details__summary">
-                <span class="govuk-details__summary-text">
-                  Help with additional behaviours and lifestyle considerations
+      <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+          <main id="main-content" class="app-content" role="main">
+            <form action="additional-behavioural-factors-and-lifestyle-considerations" method="post" novalidate>
+              <div class="govuk-form-group">
+                <span class="govuk-caption-xl">
+                  Dylan Adam Armstrong CRN: E234516
                 </span>
-              </summary>
-              <div class="govuk-details__text">
-                <p class="govuk-body">You may want to consider:</p>
-                <ul class="govuk-list govuk-list--bullet">
-                  <li>accommodation</li>
-                  <li>finances</li>
-                  <li>lifestyle</li>
-                  <li>associates</li>
-                  <li>alcohol and drug use</li>
-                  <li>mental health</li>
-                  <li>thinking and behavioural issues</li>
-                  <li>attitudes</li>
-                  <li>general health</li>
-                </ul>
+                <h1 class="govuk-heading-xl">
+                  Additional behavioural factors and lifestyle considerations
+                </h1>
+                <div id="additional-behaviours-hint" class="govuk-hint">
+                  Consider factors not already addressed in the report including any
+                  factors that require intervention, the person's capacity and
+                  motivation to address offending and identification of protective
+                  factors.
+                </div>
+                <details class="govuk-details">
+                  <summary class="govuk-details__summary">
+                    <span class="govuk-details__summary-text">
+                      Help with additional behavioural factors and lifestyle
+                      considerations
+                    </span>
+                  </summary>
+                  <div class="govuk-details__text">
+                    <p class="govuk-body">Do not just describe or list all factors
+                      linked to offending as this will not provide value to the
+                      judiciary. Instead focus on factors relevant to a sentencing
+                      decision, rehabilitative needs and the defendant's current
+                      capacity and motivation to address offending.</p>
+                      <p class="govuk-body">You may want to identify and assess:</p>
+                      <ul class="govuk-list govuk-list--bullet">
+                        <li>protective factors that may mitigate further offending</li>
+                        <li>circumstances not directly linked to the offences that
+                          may impact desistance</li>
+                        <li>barriers to engagement</li>
+                        <li>caring responsibilities for children, dependants and
+                          vulnerable adults</li>
+                      </ul>
+                  </div>
+                </details>
+                <textarea class="govuk-textarea" id="additional-behavioural-factors-and-lifestyle-considerations" name="additional-behavioural-factors-and-lifestyle-considerations" rows="16" aria-describedby="additional-behavioural-factors-and-lifestyle-considerations-hint">{{data['additional-behavioural-factors-and-lifestyle-considerations']}}</textarea>
               </div>
-            </details>
-            <textarea class="govuk-textarea" id="additional-behaviours-and-lifestyle-considerations" name="additional-behaviours-and-lifestyle-considerations" rows="8" aria-describedby="additional-behaviours-and-lifestyle-considerations-hint">{{data['additional-behaviours-and-lifestyle-considerations']}}</textarea>
-          </div>
-          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-          <div class="govuk-button-group">
-            <button class="govuk-button" data-module="govuk-button">
-              Save and continue
-            </button>
-            <button class="govuk-button govuk-button--secondary" data-module="govuk-button" name="pageAction" value="saveDraft">
-              Save draft
-            </button>
-          </div>
-        </form>
-      </main>
+              <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+              <div class="govuk-button-group">
+                <button class="govuk-button" data-module="govuk-button">
+                  Save and continue
+                </button>
+                <button class="govuk-button govuk-button--secondary" data-module="govuk-button" name="pageAction" value="saveDraft">
+                  Save draft
+                </button>
+              </div>
+            </form>
+          </main>
+        </div>
+      </div>
     </div>
     <div class="app-back-to-top app-back-to-top--fixed" data-module="app-back-to-top">
       <a class="govuk-link govuk-link--no-visited-state app-back-to-top__link" href="#top">
